cabal-version:      2.4
name:               reactive-markup-gtk
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Simre1
maintainer:         simre4775@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common
  default-extensions:
    DataKinds
    TypeFamilies
    GADTs
    MultiParamTypeClasses
    DerivingVia
    GeneralizedNewtypeDeriving
    FlexibleInstances
    FlexibleContexts
    TypeApplications
    TypeOperators
    RankNTypes
    ExistentialQuantification
    ScopedTypeVariables
    InstanceSigs
    StandaloneKindSignatures
    UndecidableInstances
    OverloadedStrings
    OverloadedLabels
    DuplicateRecordFields
  default-language: Haskell2010

library
    import: common
    exposed-modules:  ReactiveMarkup.Target.Gtk, SimpleEvents
    build-depends:    base ^>=4.14.3.0, text, containers, vector, gi-gtk, gi-gdk, gi-glib, reactive-markup, gi-pango, data-default, optics-core
    hs-source-dirs:   src


executable example
  import: common
  main-is: Main.hs
  hs-source-dirs: example
  build-depends: base ^>=4.14.3.0, text, containers, vector, reactive-markup, reactive-markup-gtk, data-default, optics-core


executable Intro
  import: common
  main-is: Intro.hs
  hs-source-dirs: example
  build-depends: base ^>=4.14.3.0, text, containers, vector, reactive-markup, reactive-markup-gtk, data-default, optics-core
