cabal-version:      2.4
name:               reactive-markup-gtk
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Simre1
maintainer:         simre4775@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common
  default-extensions:
    DataKinds
    TypeFamilies
    GADTs
    MultiParamTypeClasses
    DerivingVia
    GeneralizedNewtypeDeriving
    FlexibleInstances
    FlexibleContexts
    TypeApplications
    TypeOperators
    RankNTypes
    ExistentialQuantification
    ScopedTypeVariables
    InstanceSigs
    UndecidableInstances
    OverloadedStrings
    OverloadedLabels
    DuplicateRecordFields
    DeriveGeneric
    BangPatterns
    ConstraintKinds
    QuantifiedConstraints
  default-language: Haskell2010

library
    import: common
    exposed-modules:  
      ReactiveMarkup.Target.Gtk,
      SimpleEvents, 
      ReactiveMarkup.Target.Gtk.Base,
      ReactiveMarkup.Target.Gtk.Container,
      ReactiveMarkup.Target.Gtk.Inline,
      ReactiveMarkup.Target.Gtk.Interactive,
      ReactiveMarkup.Target.Gtk.State,
      ReactiveMarkup.Target.Gtk.Styling,
      ReactiveMarkup.Target.Gtk.ModelF,
      ReactiveMarkup.Target.Gtk.Diagram


    build-depends:    
      base, 
      text,
      containers,
      vector,
      gi-gtk ^>= 4,
      gi-gdk,
      gi-glib,
      haskell-gi-base,
      reactive-markup,
      reactive-markup-diagrams,
      diagrams-gi-gtk,
      diagrams-cairo,
      gi-pango,
      optics-core,
      bytestring,
      PyF,
      transformers
    hs-source-dirs:   src


executable example
  import: common
  main-is: Main.hs
  hs-source-dirs: example
  build-depends: base, text, containers, vector, reactive-markup, reactive-markup-gtk, data-default, optics-core

executable hello
  import: common
  main-is: Hello.hs
  hs-source-dirs: example
  build-depends: base, text, containers, vector, reactive-markup, reactive-markup-gtk, data-default, optics-core

executable Intro
  import: common
  main-is: Intro.hs
  hs-source-dirs: example
  build-depends: base , text, containers, vector, reactive-markup, reactive-markup-gtk, data-default, optics-core

executable Todo
  import: common
  main-is: Todo.hs
  hs-source-dirs: example
  build-depends: base , text, containers, vector, reactive-markup, reactive-markup-gtk, optics-core

executable Drawing
  import: common
  main-is: Drawing.hs
  hs-source-dirs: example
  build-depends: base , text, containers, vector, reactive-markup, reactive-markup-diagrams, reactive-markup-gtk, optics-core, diagrams-lib, diagrams-cairo
